🚀 update-env: NorlamRS17/carnidem-envlocal run 3 📅 push
📦 Aplicando deltas (jerarquía core → capas → módulos):
  • module NorlamRS17/OpenbravoEstandar18Q3.5: ∅..42c716c

✅ last_commits.json actualizado.

[skip ci]